--- a/hmc.ini
+++ b/hmc.ini
@@ -19,6 +19,7 @@ TrajectoryStart = 20
 TrajectoryInterval = 2
 step_size = 0.01
 adaptiveErrorTolerance = 2.e-6
+maxTau = 3.0
 topoChargeOutFile = topoCharge.txt
 
 saveSmearField = false
